demo/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: demo
  labels:
    app: demo
spec:
  containers:
  - image: nginx:alpine
    name: demo
    ports:
      - name: web
        containerPort: 80
    volumeMounts:
    - name: nfs-vol
      mountPath: /usr/share/nginx/html
  volumes:
  - name: nfs-vol
    nfs:
      path: /nfsdata/share/html    #指定PV在NFS服务器上对应的目录
      server: 192.168.64.19
